--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vuelidate/validators": "^2.0.0",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-router": "^4.0.13",
     "vuelidate": "^0.7.7"
   },
   "devDependencies": {
